[package]
name = "winnow_datetime"
version = "0.3.0"
description = "Parsing dates using winnow"
keywords = [ "iso8601", "date-time", "parser", "winnow" ]
categories = [ "parser-implementations", "date-and-time" ]

repository = "https://github.com/soulstompp/winnow-datetime"
documentation = "https://docs.rs/winnow-iso8601/"
license = "MIT"
readme = "README.md"

edition = "2021"

[dependencies]
winnow = "0.7"
chrono = { version = "0.4", default-features = false, optional = true }
jiff = {  version = "0.2.13", optional = true }
time = { version = "0.3.37", default-features = false, optional = true }
num-traits = { version = "0.2", optional = true }
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["winnow/std"]
chrono = ["dep:chrono", "dep:num-traits"]
jiff = ["dep:jiff", "dep:num-traits"]
time = ["dep:time", "dep:num-traits"]
serde = ["dep:serde"]
