[package]
name = "winnow_iso8601"
version = "0.4.0"
description = "Parsing ISO8601 dates using winnow"
keywords = [ "iso8601", "date-time", "parser", "winnow" ]
categories = [ "parser-implementations", "date-and-time" ]

repository = "https://github.com/soulstompp/winnow-iso8601"
documentation = "https://docs.rs/winnow-iso8601/"
license = "MIT"
readme = "README.md"

edition = "2021"

[dependencies]
winnow = {  version = "0.6.20"}
winnow_datetime = { path = "../winnow-datetime" }
chrono = { version = "0.4", default-features = false, optional = true }
time = { version = "0.3.37", default-features = false, optional = true }
num-traits = { version = "0.2", optional = true }
winnow_datetime_assert = { path = "../winnow-datetime-assert", optional = true }

[dev-dependencies ]
winnow_datetime_assert = { path = "../winnow-datetime-assert" }
galvanic-test = "0.2.0"

[features]
testing = ["winnow_datetime_assert"]
default = ["std"]
std = ["winnow/std"]
chrono = ["dep:chrono", "dep:num-traits"]
time = ["dep:time", "dep:num-traits"]
