[package]
name = "winnow_rfc9557"
version = "0.1.0"
description = "Parsing RFC 9557 dates using winnow"
keywords = [ "rfc9557", "rfc-9557", "date-time", "parser", "winnow" ]
categories = [ "parser-implementations", "date-and-time" ]

repository = "https://github.com/soulstompp/winnow-datetime"
documentation = "https://docs.rs/winnow-rfc9557/"
license = "MIT"
readme = "README.md"

edition = "2021"

[dependencies]
winnow = {  version = "0.7" }
winnow_datetime = { path = "../winnow-datetime", version = "0.3" }
chrono = { version = "0.4", default-features = false, optional = true }
time = { version = "0.3.37", default-features = false, optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies ]
winnow_datetime_assert = { path = "../winnow-datetime-assert", version = "0.3" }
libtest-mimic = "0.8.1"

[[test]]
name = "rfc9557_date_formats"
path="tests/formats/date.rs"
harness = false

[[test]]
name = "rfc9557_offset_formats"
path="tests/formats/offset.rs"
harness = false

[[test]]
name = "rfc9557_time_formats"
path="tests/formats/time.rs"
harness = false

[[test]]
name = "rfc9557_time_zone_formats"
path="tests/formats/time_zone.rs"
harness = false

[[test]]
name = "rfc9557_calendar_formats"
path="tests/formats/calendar.rs"
harness = false

[features]
default = ["std"]
std = ["winnow/std"]
chrono = ["dep:chrono", "dep:num-traits"]
serde = ["dep:serde", "winnow_datetime/serde"]
time = ["dep:time", "dep:num-traits"]
